Fix fullscreen overlay z-index

--- a/styles/compoments/_fullscreen-video.css
+++ b/styles/compoments/_fullscreen-video.css
@@ -2,6 +2,7 @@
 
 #overlay {
     display: none;
+    z-index: 100;
 }
 
 #overlay_rating img {
